deployments/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meridian
  labels:
    app: meridian
    component: ledger
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: meridian
    component: ledger
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: grpc
    port: 9090
    targetPort: grpc
    protocol: TCP
  sessionAffinity: None
